fix: Add language specifier to code blocks to prevent Markdown rendering issues
- Changed all text for plain text code blocks
- Fixes issue where bold text (**) was not rendered after code blocks
- Prevents Markdown parser confusion with mixed content
- Affects all 18 documentation files

--- a/docs/04_変数定義.md
+++ b/docs/04_変数定義.md
@@ -22,7 +22,7 @@ Chapter 3で見た`platform-landing-zone.auto.tfvars`（設定ファイル）の
 variable "starter_locations" {
   type = list(string)  # ←文字列のリスト
 }
-```
+```text
 
 「これは文字列のリストです」と宣言しています。
 
@@ -32,7 +32,7 @@ validation {
   condition     = length(var.starter_locations) > 0
   error_message = "最低1つのリージョンが必要です"
 }
-```
+```text
 
 間違った値が入ってたらエラーを出す。
 
@@ -42,7 +42,7 @@ variable "enable_telemetry" {
   type    = bool
   default = true  # ←指定しなかったらtrue
 }
-```
+```text
 
 値を指定しなかった時の初期値。
 
@@ -67,14 +67,14 @@ variable "starter_locations" {
     error_message = "The number of regions supplied in `starter_locations` must match the number of regions specified for connectivity."
   }
 }
-```
+```text
 
 **分解して見ていきましょう**
 
 #### type = list(string)
 ```hcl
 type = list(string)
-```
+```text
 
 **意味**：文字列のリスト
 
@@ -82,14 +82,14 @@ type = list(string)
 ```hcl
 starter_locations = ["japaneast", "japanwest"]  # ✅
 starter_locations = ["eastus"]                   # ✅
-```
+```text
 
 **NG例**：
 ```hcl
 starter_locations = "japaneast"     # ❌ リストじゃない
 starter_locations = [123, 456]      # ❌ 文字列じゃない
 starter_locations = []              # ❌ 空はダメ（次のバリデーションでエラー）
-```
+```text
 
 #### validation 1: 最低1個必要
 ```hcl
@@ -97,7 +97,7 @@ validation {
   condition     = length(var.starter_locations) > 0
   error_message = "You must provide at least one starter location region."
 }
-```
+```text
 
 **チェック内容**：
 
@@ -111,7 +111,7 @@ starter_locations = []  # ❌
 
 # エラーメッセージ：
 # You must provide at least one starter location region.
-```
+```text
 
 #### validation 2: Hubの数とリージョン数が合ってるか
 ```hcl
@@ -119,7 +119,7 @@ validation {
   condition     = var.connectivity_type == "none" || ((length(var.virtual_hubs) <= length(var.starter_locations)) || (length(var.hub_virtual_networks) <= length(var.starter_locations)))
   error_message = "The number of regions supplied in `starter_locations` must match the number of regions specified for connectivity."
 }
-```
+```text
 
 **意味**：
 
@@ -141,7 +141,7 @@ hub_virtual_networks = {
   primary = { ... }
   secondary = { ... }  # Hub 2個 → 足りない！
 }
-```
+```text
 
 ### starter_locations_short
 
@@ -154,7 +154,7 @@ Optional overrides for the starter location short codes.
 ...
 DESCRIPTION
 }
-```
+```text
 
 **これは何？**
 リージョンの短縮コードを手動で指定したい時に使う。
@@ -170,7 +170,7 @@ starter_locations_short = {
   starter_location_01_short = "je"   # jpeじゃなくてjeにしたい
   starter_location_02_short = "jw"   # jpwじゃなくてjwにしたい
 }
-```
+```text
 
 普通は使わない。デフォルトで十分。
 
@@ -197,7 +197,7 @@ variable "subscription_ids" {
     error_message = "The keys of the subscription_ids map must be one of 'management', 'connectivity', 'identity' or 'security'"
   }
 }
-```
+```text
 
 **type = map(string)**
 キーと値のペア。
@@ -210,7 +210,7 @@ subscription_ids = {
   identity     = "11111111-2222-3333-4444-555555555555"
   security     = "99999999-8888-7777-6666-555555555555"
 }
-```
+```text
 
 #### validation 1: GUID形式チェック
 ```hcl
@@ -218,7 +218,7 @@ validation {
   condition     = length(var.subscription_ids) == 0 || alltrue([for id in values(var.subscription_ids) : can(regex("^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12})$", id))])
   error_message = "All subscription IDs must be valid GUIDs"
 }
-```
+```text
 
 **チェック内容**：
 
@@ -233,7 +233,7 @@ subscription_ids = {
 }
 
 # エラー: All subscription IDs must be valid GUIDs
-```
+```text
 
 #### validation 2: キー名チェック
 ```hcl
@@ -241,7 +241,7 @@ validation {
   condition     = length(var.subscription_ids) == 0 || alltrue([for id in keys(var.subscription_ids) : contains(["management", "connectivity", "identity", "security"], id)])
   error_message = "The keys of the subscription_ids map must be one of 'management', 'connectivity', 'identity' or 'security'"
 }
-```
+```text
 
 **チェック内容**：
 キー名は`management`、`connectivity`、`identity`、`security`のどれかじゃないとダメ。
@@ -253,7 +253,7 @@ subscription_ids = {
 }
 
 # エラー: The keys of the subscription_ids map must be one of 'management', 'connectivity', 'identity' or 'security'
-```
+```text
 
 ### subscription_id_connectivity（古い方式）
 
@@ -268,7 +268,7 @@ variable "subscription_id_connectivity" {
     error_message = "The subscription ID must be a valid GUID"
   }
 }
-```
+```text
 
 **DEPRECATED**って書いてあるでしょ？
 これは古い方式。使わないで。
@@ -279,7 +279,7 @@ variable "subscription_id_connectivity" {
 subscription_id_connectivity = "12345678-..."
 subscription_id_management   = "87654321-..."
 subscription_id_identity     = "11111111-..."
-```
+```text
 
 今はこう：
 ```hcl
@@ -289,7 +289,7 @@ subscription_ids = {
   management   = "87654321-..."
   identity     = "11111111-..."
 }
-```
+```text
 
 ---
 
@@ -303,16 +303,16 @@ variable "root_parent_management_group_id" {
   default     = ""
   description = "This is the id of the management group that the ALZ hierarchy will be nested under, will default to the Tenant Root Group"
 }
-```
+```text
 
 **これは何？**
 Landing Zonesの管理グループ階層を、どこにぶら下げるか。
 
 **デフォルト**（`""`）：
-```
+```text
 Tenant Root Group（テナントルート）
   └── ALZの管理グループ階層
-```
+```text
 
 **既存の管理グループの下に作りたい場合**：
 ```hcl
@@ -321,7 +321,7 @@ root_parent_management_group_id = "/providers/Microsoft.Management/managementGro
 # 結果
 my-company
   └── ALZの管理グループ階層
-```
+```text
 
 普通はデフォルトでOK。
 
@@ -337,7 +337,7 @@ variable "enable_telemetry" {
   default     = true
   description = "Flag to enable/disable telemetry"
 }
-```
+```text
 
 **これは何？**
 Microsoftに使用状況データを送るかどうか。
@@ -348,7 +348,7 @@ Microsoftに使用状況データを送るかどうか。
 無効にしたい場合：
 ```hcl
 enable_telemetry = false
-```
+```text
 
 個人情報は送られないから、trueのままでいいと思う。
 
@@ -368,7 +368,7 @@ variable "custom_replacements" {
   }
   description = "Custom replacements"
 }
-```
+```text
 
 **型が複雑！**
 `object`型で、中に3つの`map(string)`が入ってる。
@@ -388,7 +388,7 @@ custom_replacements = {
     ...
   }
 }
-```
+```text
 
 **optional**って何？
 
@@ -403,7 +403,7 @@ custom_replacements = {
   # resource_group_identifiers省略
   # resource_identifiers省略
 }
-```
+```text
 
 Chapter 3で見た設定が、ここで定義されてるわけ。
 
@@ -415,7 +415,7 @@ variable "tags" {
   default     = null
   description = "(Optional) Tags of the resource."
 }
-```
+```text
 
 **型**：`map(string)`（キーと値のペア）
 **デフォルト**：`null`（何も指定しなければタグなし）
@@ -427,7 +427,7 @@ tags = {
   cost_center = "IT"
   owner       = "platform-team"
 }
-```
+```text
 
 ---
 
@@ -445,7 +445,7 @@ variable "name" {
 
 # 使い方
 name = "my-resource"
-```
+```text
 
 #### number（数値）
 ```hcl
@@ -455,7 +455,7 @@ variable "count" {
 
 # 使い方
 count = 3
-```
+```text
 
 #### bool（真偽値）
 ```hcl
@@ -465,7 +465,7 @@ variable "enabled" {
 
 # 使い方
 enabled = true
-```
+```text
 
 ### コレクション型（複数の値）
 
@@ -477,7 +477,7 @@ variable "locations" {
 
 # 使い方
 locations = ["japaneast", "japanwest"]
-```
+```text
 
 #### map（マップ）
 ```hcl
@@ -490,7 +490,7 @@ tags = {
   env = "prod"
   app = "web"
 }
-```
+```text
 
 #### set（セット）
 ```hcl
@@ -500,7 +500,7 @@ variable "unique_items" {
 
 # 使い方
 unique_items = ["a", "b", "c"]  # 重複は自動削除される
-```
+```text
 
 ### 構造型（複雑な構造）
 
@@ -520,7 +520,7 @@ vm_config = {
   size = "Standard_B2s"
   enabled = true
 }
-```
+```text
 
 #### optional（省略可能）
 ```hcl
@@ -542,7 +542,7 @@ config = {
   name = "test"
   # tags省略 → 自動で{}になる
 }
-```
+```text
 
 ---
 
@@ -559,7 +559,7 @@ variable "example" {
     error_message = "エラーメッセージ"
   }
 }
-```
+```text
 
 **conditionがfalseになったらエラー**
 
@@ -571,7 +571,7 @@ validation {
   condition     = length(var.my_list) > 0
   error_message = "リストは最低1個必要"
 }
-```
+```text
 
 #### 正規表現チェック
 ```hcl
@@ -579,7 +579,7 @@ validation {
   condition     = can(regex("^[a-z0-9-]+$", var.name))
   error_message = "名前は小文字、数字、ハイフンのみ"
 }
-```
+```text
 
 #### 値の範囲チェック
 ```hcl
@@ -587,7 +587,7 @@ validation {
   condition     = var.count >= 1 && var.count <= 10
   error_message = "countは1〜10の間"
 }
-```
+```text
 
 #### 選択肢チェック
 ```hcl
@@ -595,7 +595,7 @@ validation {
   condition     = contains(["dev", "stg", "prod"], var.environment)
   error_message = "environmentはdev、stg、prodのどれか"
 }
-```
+```text
 
 #### リスト全要素チェック
 ```hcl
@@ -603,7 +603,7 @@ validation {
   condition     = alltrue([for item in var.items : length(item) > 3])
   error_message = "全ての要素は4文字以上"
 }
-```
+```text
 
 ---
 
@@ -623,12 +623,12 @@ variable "custom_firewall_name" {
     error_message = "Firewall name must start with 'fw-' and contain only lowercase letters, numbers, and hyphens"
   }
 }
-```
+```text
 
 ### 2. platform-landing-zone.auto.tfvarsで使う
 ```hcl
 custom_firewall_name = "fw-my-custom-firewall"
-```
+```text
 
 ### 3. main.tfで参照
 ```hcl
@@ -636,7 +636,7 @@ resource "azurerm_firewall" "example" {
   name = var.custom_firewall_name != null ? var.custom_firewall_name : "fw-default"
   ...
 }
-```
+```text
 
 簡単でしょ？
 
