--- a/docs/05_ローカル変数.md
+++ b/docs/05_ローカル変数.md
@@ -23,7 +23,7 @@ locals {
   project_name = "alz"
   full_name    = "${local.project_name}-${var.environment}"
 }
-```
+```text
 
 **使い方**：
 ```hcl
@@ -31,7 +31,7 @@ resource "azurerm_resource_group" "example" {
   name     = local.full_name  # ←local.で参照
   location = var.location     # ←変数はvar.で参照
 }
-```
+```text
 
 **ポイント**：
 
@@ -76,19 +76,19 @@ locals {
   # 計算結果
   subnet_count = var.enable_vpn ? 5 : 4
 }
-```
+```text
 
 **どっちを使えばいいか迷ったら**:
 
-```
+```text
 ユーザーに変更させたい？
   YES → variables
   NO  → locals
-```
+```text
 
 **📊 処理フローの視覚化**
 
-```
+```text
 【Terraform実行の流れ】
 
 1. 入力（variables）
@@ -111,7 +111,7 @@ locals {
      name     = local.resource_group_name  ← 加工済みの値を使う
      location = var.location               ← 入力値をそのまま使う
    }
-```
+```text
 
 **🎯 具体例でもう一度**
 
@@ -147,7 +147,7 @@ resource "azurerm_resource_group" "main" {
   location = var.region                 # ← そのまま
   tags     = local.common_tags          # ← 加工済み
 }
-```
+```text
 
 **覚え方**:
 - **variables**: 入力（ユーザーが決める）
@@ -168,7 +168,7 @@ locals {
     }
   }
 }
-```
+```text
 
 **これは何？**
 定数を定義しています。マジックストリング（文字列直書き）を避けるためです。
@@ -178,7 +178,7 @@ locals {
 if (var.connectivity_type == "hub_and_spoke_vnet") {  # ←タイポしやすい
   ...
 }
-```
+```text
 
 **良い例**：
 ```hcl
@@ -186,7 +186,7 @@ if (var.connectivity_type == local.const.connectivity.hub_and_spoke_vnet) {
   # ←補完が効く、タイポしたらエラーになる
   ...
 }
-```
+```text
 
 **定義されてる定数**：
 
@@ -206,7 +206,7 @@ locals {
   connectivity_virtual_wan_enabled        = var.connectivity_type == local.const.connectivity.virtual_wan
   connectivity_hub_and_spoke_vnet_enabled = var.connectivity_type == local.const.connectivity.hub_and_spoke_vnet
 }
-```
+```text
 
 **これは何？**
 `connectivity_type`の値を見て、フラグを作っています。
@@ -215,7 +215,7 @@ locals {
 
 ```hcl
 connectivity_enabled = var.connectivity_type != local.const.connectivity.none
-```
+```text
 
 **意味**：ネットワーク作るの？
 
@@ -226,7 +226,7 @@ connectivity_type = "hub_and_spoke_vnet"
 
 # 結果
 local.connectivity_enabled = true  # ←noneじゃないからtrue
-```
+```text
 
 ```hcl
 # tfvars
@@ -234,7 +234,7 @@ connectivity_type = "none"
 
 # 結果
 local.connectivity_enabled = false  # ←noneだからfalse
-```
+```text
 
 **使い道**：
 ```hcl
@@ -243,13 +243,13 @@ resource "azurerm_xxx" "example" {
   count = local.connectivity_enabled ? 1 : 0
   ...
 }
-```
+```text
 
 ### connectivity_virtual_wan_enabled
 
 ```hcl
 connectivity_virtual_wan_enabled = var.connectivity_type == local.const.connectivity.virtual_wan
-```
+```text
 
 **意味**：Virtual WAN使うの？
 
@@ -260,13 +260,13 @@ connectivity_type = "virtual_wan"
 
 # 結果
 local.connectivity_virtual_wan_enabled = true
-```
+```text
 
 ### connectivity_hub_and_spoke_vnet_enabled
 
 ```hcl
 connectivity_hub_and_spoke_vnet_enabled = var.connectivity_type == local.const.connectivity.hub_and_spoke_vnet
-```
+```text
 
 **意味**：Hub-and-Spoke使うの？
 
@@ -277,7 +277,7 @@ connectivity_type = "hub_and_spoke_vnet"
 
 # 結果
 local.connectivity_hub_and_spoke_vnet_enabled = true
-```
+```text
 
 **なんでこんなことするの？**
 
@@ -295,7 +295,7 @@ module "virtual_wan" {
   count = local.connectivity_virtual_wan_enabled ? 1 : 0
   ...
 }
-```
+```text
 
 ---
 
@@ -311,7 +311,7 @@ locals {
   virtual_wan_settings            = merge(module.config.outputs.virtual_wan_settings, local.resource_groups)
   virtual_hubs                    = (merge({ vhubs = module.config.outputs.virtual_hubs }, local.resource_groups)).vhubs
 }
-```
+```text
 
 **これは何？**
 リソースグループを先に作ってから、ネットワークを作るための仕組み。
@@ -330,7 +330,7 @@ resource "azurerm_virtual_network" "hub" {
   resource_group_name = azurerm_resource_group.network.name
   # ↑これで依存関係ができる（RG→VNet）
 }
-```
+```text
 
 でも、モジュール使ってる場合は**明示的に依存関係を書く**必要がある。
 
@@ -340,7 +340,7 @@ resource "azurerm_virtual_network" "hub" {
 resource_groups = {
   resource_groups = module.resource_groups
 }
-```
+```text
 
 リソースグループモジュールの出力を保存。
 
@@ -351,7 +351,7 @@ hub_and_spoke_networks_settings = merge(
   module.config.outputs.hub_and_spoke_networks_settings,
   local.resource_groups
 )
-```
+```text
 
 **merge関数**：2つのオブジェクトをマージする
 
@@ -369,7 +369,7 @@ hub_and_spoke_networks_settings = {
   cidr     = "10.0.0.0/16"
   resource_groups = module.resource_groups  # ←追加
 }
-```
+```text
 
 **効果**：
 
@@ -380,7 +380,7 @@ hub_and_spoke_networks_settings = {
 
 ```hcl
 hub_virtual_networks = (merge({ vnets = module.config.outputs.hub_virtual_networks }, local.resource_groups)).vnets
-```
+```text
 
 **ちょっと複雑**だから分解しよう。
 
@@ -396,7 +396,7 @@ merge(
   vnets = { ... }
   resource_groups = module.resource_groups
 }
-```
+```text
 
 #### ステップ2: .vnetsで取り出す
 ```hcl
@@ -404,7 +404,7 @@ merge(
 
 # 結果
 { ... }  # ←vnetsの中身だけ
-```
+```text
 
 **なんでこんなことするの？**
 - `resource_groups`を含めて依存関係を作る
@@ -431,7 +431,7 @@ locals {
     ]
   }
 }
-```
+```text
 
 **これは何？**
 管理グループにポリシーを割り当てる前に、**他のリソースを先に作る**ための仕組み。
@@ -452,7 +452,7 @@ policy_assignments = [
   module.hub_and_spoke_vnet,
   module.virtual_wan
 ]
-```
+```text
 
 リストに含めることで、Terraformが順番を理解する。
 
@@ -481,7 +481,7 @@ locals {
     }
   )
 }
-```
+```text
 
 **やってること**：
 1. `module.config`から管理グループの設定を取得
@@ -505,7 +505,7 @@ management_group_settings = {
     policy_role_assignments = [ ... ]
   }
 }
-```
+```text
 
 ### management_resource_settings
 
@@ -518,20 +518,20 @@ locals {
     }
   )
 }
-```
+```text
 
 **coalesce関数**って何？
 
 ```hcl
 coalesce(値1, 値2, 値3, ...)
 # ←最初のnullじゃない値を返す
-```
+```text
 
 **例**：
 ```hcl
 coalesce(null, null, "hello")  # ←"hello"
 coalesce("first", "second")    # ←"first"
-```
+```text
 
 **この場合**：
 ```hcl
@@ -539,7 +539,7 @@ tags = coalesce(
   module.config.outputs.management_resource_settings.tags,
   module.config.outputs.tags
 )
-```
+```text
 
 **意味**：
 
@@ -559,7 +559,7 @@ management_resource_settings.tags = null
 # 結果
 # ↓全体のタグが使われる
 management_resource_settings.tags = { environment = "prod" }
-```
+```text
 
 ---
 
@@ -579,7 +579,7 @@ locals {
 
 # 使い方
 status = local.const.status.active
-```
+```text
 
 **メリット**：タイポ防止、補完が効く
 
@@ -590,7 +590,7 @@ locals {
   is_production = var.environment == "prod"
   instance_count = local.is_production ? 3 : 1
 }
-```
+```text
 
 **メリット**：複雑な条件をわかりやすく
 
@@ -605,7 +605,7 @@ locals {
   
   resource_name = "${var.prefix}-${local.location_short[var.location]}"
 }
-```
+```text
 
 **メリット**：変換ロジックを1箇所に集約
 
@@ -618,7 +618,7 @@ locals {
     { dependencies = [module.base_resources] }
   )
 }
-```
+```text
 
 **メリット**：リソースの作成順序を制御
 
@@ -628,7 +628,7 @@ locals {
 locals {
   tags = coalesce(var.custom_tags, var.default_tags)
 }
-```
+```text
 
 **メリット**：柔軟な設定、省略時の挙動を制御
 
@@ -666,7 +666,7 @@ resource "azurerm_virtual_machine" "example" {
   size  = local.config.instance_size
   ...
 }
-```
+```text
 
 ### 例2: 命名規則の統一
 
@@ -701,7 +701,7 @@ resource "azurerm_resource_group" "example" {
 resource "azurerm_virtual_network" "example" {
   name = local.resource_names.vnet
 }
-```
+```text
 
 ### 例3: 条件付きリソース作成
 
@@ -734,7 +734,7 @@ resource "azurerm_monitor_diagnostic_setting" "advanced" {
   count = local.advanced_monitoring_enabled ? 1 : 0
   ...
 }
-```
+```text
 
 ---
 
@@ -751,7 +751,7 @@ output "debug_locals" {
     resource_names       = local.resource_names
   }
 }
-```
+```text
 
 **実行**：
 ```bash
@@ -767,7 +767,7 @@ Outputs:
       ...
     }
   }
-```
+```text
 
 ローカル変数の中身が見えるから、デバッグが楽。
 
@@ -810,7 +810,7 @@ variable "location" {
 locals {
   resource_group_name = "rg-${var.environment}-${var.location}"
 }
-```
+```text
 
 ### 問題2
 `variables`と`locals`の違いを説明してください。  
@@ -823,16 +823,16 @@ locals {
 locals {
   is_production = var.environment == "prod" ? true : false
 }
-```
+```text
 
 ---
 
 ## 練習問題の答え
 
 ### 答え1
-```
+```text
 rg-prod-japaneast
-```
+```text
 
 文字列補間で`var.environment`（prod）と`var.location`（japaneast）が結合されます。
 
@@ -849,11 +849,11 @@ rg-prod-japaneast
 ### 答え3
 **三項演算子**を使って、環境が本番（prod）かどうかを判定しています。
 
-```
+```text
 var.environment == "prod" ? true : false
          ↑                  ↑      ↑
       条件式             真の場合 偽の場合
-```
+```text
 
 - `environment`が`"prod"`なら`true`
 - それ以外なら`false`
