--- a/docs/09_管理リソース.md
+++ b/docs/09_管理リソース.md
@@ -37,7 +37,7 @@
 ### なんで必要なの？
 
 **シナリオ1：セキュリティ監視**
-```
+```text
 VM作成
   ↓
 Defender for Cloudが「このVMにエージェント入れて」
@@ -45,17 +45,17 @@ Defender for Cloudが「このVMにエージェント入れて」
 でもどこにログ送るの？ ← Log Analytics必要
   ↓
 どうやってエージェント入れるの？ ← Managed Identity必要
-```
+```text
 
 **シナリオ2：コンプライアンス**
-```
+```text
 ポリシー：「全VMはログをLog Analyticsに送信」
   ↓
 でもワークスペースがない ← 作っとかないとダメ
-```
+```text
 
 **シナリオ3：トラブルシューティング**
-```
+```text
 VMが遅い
   ↓
 ログを見たい
@@ -63,7 +63,7 @@ VMが遅い
 Log Analyticsでクエリ実行
   ↓
 原因特定
-```
+```text
 
 ---
 
@@ -98,7 +98,7 @@ management_resource_settings = {
     }
   }
 }
-```
+```text
 
 **テンプレート処理後**：
 ```hcl
@@ -126,14 +126,14 @@ management_resource_settings = {
     }
   }
 }
-```
+```text
 
 ### フィールド解説
 
 #### enabled
 ```hcl
 enabled = true
-```
+```text
 
 **何？**：管理リソース作成の有効/無効
 
@@ -143,7 +143,7 @@ enabled = true
 #### location
 ```hcl
 location = "japaneast"
-```
+```text
 
 **何？**：リソースの場所
 
@@ -152,7 +152,7 @@ Log Analyticsワークスペースの場所。
 #### log_analytics_workspace_name
 ```hcl
 log_analytics_workspace_name = "law-management-japaneast"
-```
+```text
 
 **何？**：Log Analyticsワークスペースの名前
 
@@ -165,7 +165,7 @@ log_analytics_workspace_name = "law-management-japaneast"
 #### resource_group_name
 ```hcl
 resource_group_name = "rg-management"
-```
+```text
 
 **何？**：管理リソース用のリソースグループ名
 
@@ -182,7 +182,7 @@ user_assigned_managed_identities = {
     name = "id-ama-japaneast"
   }
 }
-```
+```text
 
 **何？**：Azure Monitor Agent（AMA）用のManaged Identity
 
@@ -190,7 +190,7 @@ user_assigned_managed_identities = {
 VMにインストールするエージェント。ログとかメトリクスを収集してLog Analyticsに送る。
 
 **Managed Identityの役割**：
-```
+```text
 VM
   ↓ AMAインストール
 VM（AMA付き）
@@ -198,7 +198,7 @@ VM（AMA付き）
 Log Analytics Workspace
   ↓ ログ送信
 ログが保存される
-```
+```text
 
 パスワード不要で認証できるのが便利。
 
@@ -209,16 +209,16 @@ data_collection_rules = {
   defender_sql    = { name = "dcr-defender-sql" }
   vm_insights     = { name = "dcr-vm-insights" }
 }
-```
+```text
 
 **何？**：データ収集ルール（DCR）
 
 **3種類のDCR**：
 
 ##### 1. change_tracking
-```
+```text
 「ファイルやレジストリの変更を追跡」
-```
+```text
 
 **使い道**：
 
@@ -229,9 +229,9 @@ data_collection_rules = {
 - 不審なプログラムインストールされた？
 
 ##### 2. defender_sql
-```
+```text
 「SQL Serverのセキュリティログ収集」
-```
+```text
 
 **使い道**：
 
@@ -240,9 +240,9 @@ data_collection_rules = {
 - コンプライアンス監査
 
 ##### 3. vm_insights
-```
+```text
 「VMのパフォーマンスとヘルス監視」
-```
+```text
 
 **使い道**：
 
@@ -270,12 +270,12 @@ module "management_resources" {
     azurerm = azurerm.management
   }
 }
-```
+```text
 
 #### count
 ```hcl
 count = var.management_resources_enabled ? 1 : 0
-```
+```text
 
 **何してる？**
 管理リソース作成の有効/無効を切り替え。
@@ -284,14 +284,14 @@ count = var.management_resources_enabled ? 1 : 0
 ```hcl
 # tfvars
 management_resources_enabled = false  # ←管理リソース作らない
-```
+```text
 
 #### providers
 ```hcl
 providers = {
   azurerm = azurerm.management
 }
-```
+```text
 
 **何してる？**
 Managementサブスクリプションにリソース作成。
@@ -314,7 +314,7 @@ module "management_resources" {
   linked_automation_account_creation_enabled = false
   ...
 }
-```
+```text
 
 **Azure公式モジュール**を使ってる。
 
@@ -324,7 +324,7 @@ log_analytics_workspace_name = coalesce(
   var.management_resource_settings.log_analytics_workspace_name,
   "law-management-${var.management_resource_settings.location}"
 )
-```
+```text
 
 **何してる？**
 - 名前が指定されてればそれを使う
@@ -341,17 +341,17 @@ log_analytics_workspace_name = "my-custom-law"
 log_analytics_workspace_name = null
 # ↓
 結果：law-management-japaneast
-```
+```text
 
 #### resource_group_creation_enabled
 ```hcl
 resource_group_creation_enabled = true
-```
+```text
 
 **何してる？**
 リソースグループも自動で作る。
 
-```
+```text
 モジュール実行
   ↓
 1. rg-management作成
@@ -361,12 +361,12 @@ resource_group_creation_enabled = true
 3. DCR作成
   ↓
 4. Managed Identity作成
-```
+```text
 
 #### linked_automation_account_creation_enabled
 ```hcl
 linked_automation_account_creation_enabled = false
-```
+```text
 
 **何してる？**
 Automation Accountを作らない。
@@ -385,13 +385,13 @@ VMの自動パッチ適用とか自動化タスク用。
 #### 何ができる？
 
 **1. ログの保管**
-```
+```text
 全てのログをここに集約
 - VMのログ
 - Firewallのログ
 - NSGのフローログ
 - Azure ADのサインインログ
-```
+```text
 
 **2. クエリ実行**
 ```kql
@@ -400,22 +400,22 @@ AzureDiagnostics
 | where TimeGenerated > ago(24h)
 | where Level == "Error"
 | summarize count() by Resource
-```
+```text
 
 **KQL（Kusto Query Language）**でクエリ書ける。めっちゃ強力。
 
 **3. アラート作成**
-```
+```text
 「エラーが10件/分を超えたら通知」
 「CPU使用率が80%超えたら通知」
-```
+```text
 
 #### 設定項目
 
 ##### retention_in_days
 ```hcl
 log_analytics_workspace_retention_in_days = 30
-```
+```text
 
 **何？**：ログの保持期間
 
@@ -429,21 +429,21 @@ retention_in_days = 30  # 最小
 
 # 本番環境（コンプライアンス要件）
 retention_in_days = 365  # 1年保管
-```
+```text
 
 ##### daily_quota_gb
 ```hcl
 log_analytics_workspace_daily_quota_gb = 10
-```
+```text
 
 **何？**：1日のログ取り込み上限
 
 **使い道**：
-```
+```text
 ログが爆発的に増えた時の防御策
 → クォータに達したらそれ以上取り込まない
 → 課金の暴走を防ぐ
-```
+```text
 
 **注意**：
 クォータに達すると**ログが取り込まれない**から、重要なログが欠損する可能性あり。
@@ -451,7 +451,7 @@ log_analytics_workspace_daily_quota_gb = 10
 ##### sku
 ```hcl
 log_analytics_workspace_sku = "PerGB2018"
-```
+```text
 
 **何？**：料金プラン
 
@@ -459,10 +459,10 @@ log_analytics_workspace_sku = "PerGB2018"
 - `CapacityReservation`：コミットメント（大量利用で割引）
 
 **料金**：
-```
+```text
 PerGB2018：約500円/GB
 CapacityReservation：100GB/日から（割引率あり）
-```
+```text
 
 ### Data Collection Rule（DCR）
 
@@ -477,14 +477,14 @@ CapacityReservation：100GB/日から（割引率あり）
 
 #### change_tracking DCR
 
-```
+```text
 収集するデータ：
 
 - ファイルの変更
 - レジストリの変更
 - Windowsサービスの変更
 - Linuxデーモンの変更
-```
+```text
 
 **使用例**：
 ```kql
@@ -493,17 +493,17 @@ ConfigurationChange
 | where TimeGenerated > ago(24h)
 | where ConfigChangeType == "Files"
 | project Computer, FileName, FileSystemPath, TimeGenerated
-```
+```text
 
 #### defender_sql DCR
 
-```
+```text
 収集するデータ：
 
 - SQL Serverのセキュリティイベント
 - 脆弱性スキャン結果
 - 脅威検出アラート
-```
+```text
 
 **使用例**：
 ```kql
@@ -512,17 +512,17 @@ SecurityAlert
 | where TimeGenerated > ago(24h)
 | where AlertType contains "SQL"
 | project AlertName, Severity, Entities, TimeGenerated
-```
+```text
 
 #### vm_insights DCR
 
-```
+```text
 収集するデータ：
 
 - パフォーマンスカウンター（CPU、メモリ、ディスク、ネットワーク）
 - プロセス情報
 - ネットワーク接続
-```
+```text
 
 **使用例**：
 ```kql
@@ -532,7 +532,7 @@ Perf
 | where ObjectName == "Processor" and CounterName == "% Processor Time"
 | where CounterValue > 80
 | summarize avg(CounterValue) by Computer
-```
+```text
 
 ### Managed Identity
 
@@ -541,7 +541,7 @@ Perf
 **パスワード不要の認証**
 
 **従来の方法**：
-```
+```text
 VMにエージェントインストール
   ↓
 設定ファイルに書く：
@@ -553,10 +553,10 @@ VMにエージェントインストール
 - パスワード漏洩リスク
 - ローテーション面倒
 - 設定ファイルに平文で書くのは危険
-```
+```text
 
 **Managed Identityの方法**：
-```
+```text
 VMにManaged Identity割り当て
   ↓
 エージェントはManaged Identityで認証
@@ -564,28 +564,28 @@ VMにManaged Identity割り当て
 Azureが自動で認証トークン発行
   ↓
 パスワード不要！
-```
+```text
 
 #### 種類
 
 ##### System-assigned（システム割り当て）
-```
+```text
 VMに1対1で紐付く
 VMを削除 → Managed Identityも削除
-```
+```text
 
 ##### User-assigned（ユーザー割り当て）
-```
+```text
 独立して存在
 複数のVMで共有できる
 VMを削除してもManaged Identityは残る
-```
+```text
 
 **このプロジェクトではUser-assigned**を使ってる。
 
 #### 使われ方
 
-```
+```text
 1. Managed Identity作成
    id-ama-japaneast
 
@@ -598,7 +598,7 @@ VMを削除してもManaged Identityは残る
 4. VMのAMAがManaged Identityで認証
    AMA → id-ama-japaneastのトークン取得
         → Log Analyticsにログ送信
-```
+```text
 
 ---
 
@@ -614,7 +614,7 @@ policy_default_values = {
   ama_user_assigned_managed_identity_id       = "$${ama_user_assigned_managed_identity_id}"
   log_analytics_workspace_id                  = "$${log_analytics_workspace_id}"
 }
-```
+```text
 
 **何をしているのでしょうか？**
 管理リソースのIDをポリシーに渡しています。
@@ -623,7 +623,7 @@ policy_default_values = {
 
 **シナリオ：VMにAMAをデプロイするポリシー**
 
-```
+```text
 1. ポリシー「VMを作ったらAMAインストール」が発動
 
 2. ポリシーがManaged IdentityのIDを取得
@@ -635,7 +635,7 @@ policy_default_values = {
 4. VMにAMAインストール + Managed Identity割り当て + DCR関連付け
 
 5. 完了：VMが自動でログ送信開始
-```
+```text
 
 **自動化されてるのが便利**。
 
@@ -651,13 +651,13 @@ management_resource_settings = {
   ...
   log_analytics_workspace_retention_in_days = 90  # 90日保管
 }
-```
+```text
 
 **コスト試算**：
-```
+```text
 30日：無料
 90日：約30円/GB（追加60日分）
-```
+```text
 
 ### 例2: 複数のManaged Identity
 
@@ -673,7 +673,7 @@ user_assigned_managed_identities = {
     name = "id-backup-japaneast"
   }
 }
-```
+```text
 
 **使い分け**：
 
@@ -693,7 +693,7 @@ data_collection_rules = {
     # カスタムアプリのログ収集ルール
   }
 }
-```
+```text
 
 ---
 
@@ -709,16 +709,16 @@ az monitor log-analytics workspace list --output table
 az monitor log-analytics workspace show \
   --resource-group rg-management \
   --workspace-name law-management-japaneast
-```
+```text
 
 Azureポータル：
-```
+```text
 Log Analytics workspaces → law-management-japaneast
   ↓
 Logs → KQLクエリ実行
   ↓
 結果表示
-```
+```text
 
 ### DCRの確認
 
@@ -730,7 +730,7 @@ az monitor data-collection rule list --output table
 az monitor data-collection rule show \
   --resource-group rg-management \
   --name dcr-change-tracking
-```
+```text
 
 ### Managed Identityの確認
 
@@ -742,7 +742,7 @@ az identity list --output table
 az identity show \
   --resource-group rg-management \
   --name id-ama-japaneast
-```
+```text
 
 ### ログの確認
 
@@ -763,7 +763,7 @@ SecurityEvent
 | where TimeGenerated > ago(24h)
 | where EventID == 4625  // ログイン失敗
 | summarize count() by Account
-```
+```text
 
 ---
 
@@ -771,9 +771,9 @@ SecurityEvent
 
 ### エラー1: ワークスペース名の重複
 
-```
+```text
 Error: A workspace with the name 'law-management-japaneast' already exists
-```
+```text
 
 **原因**：同じ名前のワークスペースが既に存在
 
@@ -786,13 +786,13 @@ log_analytics_workspace_name = "law-management-japaneast-v2"
 az monitor log-analytics workspace delete \
   --resource-group rg-management \
   --workspace-name law-management-japaneast
-```
+```text
 
 ### エラー2: クォータ超過
 
-```
+```text
 Warning: Daily cap of 10 GB reached
-```
+```text
 
 **原因**：1日のログ取り込み量がクォータに達した
 
@@ -802,13 +802,13 @@ Warning: Daily cap of 10 GB reached
 log_analytics_workspace_daily_quota_gb = 50
 
 # またはログ量を削減（不要なログを無効化）
-```
+```text
 
 ### エラー3: Managed Identityの権限不足
 
-```
+```text
 Error: Managed Identity does not have permission to write to Log Analytics
-```
+```text
 
 **原因**：Managed Identityに権限が付与されてない
 
@@ -819,7 +819,7 @@ az role assignment create \
   --assignee <managed-identity-principal-id> \
   --role "Log Analytics Contributor" \
   --scope <log-analytics-workspace-id>
-```
+```text
 
 ---
 
@@ -828,21 +828,21 @@ az role assignment create \
 ### コスト構造
 
 **Log Analytics**：
-```
+```text
 取り込み：約500円/GB
 保持（31日以降）：約15円/GB/月
 クエリ：基本無料（大量実行は課金）
-```
+```text
 
 **DCR**：
-```
+```text
 無料（データ処理量に応じた課金なし）
-```
+```text
 
 **Managed Identity**：
-```
+```text
 無料
-```
+```text
 
 ### コスト削減技
 
@@ -855,15 +855,15 @@ data_collection_rules = {
   # defender_sql = { ... }  # ←コメントアウト
   vm_insights = { ... }
 }
-```
+```text
 
 #### 2. サンプリング
 
-```
+```text
 全ログを取り込まない
 → 1%だけサンプリング
 → コスト1/100
-```
+```text
 
 **注意**：詳細な分析はできなくなる。
 
@@ -875,14 +875,14 @@ log_analytics_workspace_retention_in_days = 30
 
 # 本番環境：コンプライアンス要件に応じて
 log_analytics_workspace_retention_in_days = 90
-```
+```text
 
 #### 4. クォータ設定
 
 ```hcl
 # 暴走防止
 log_analytics_workspace_daily_quota_gb = 10
-```
+```text
 
 ---
 
