fix: Remove code block causing markdown rendering issue

--- a/docs/01_基礎知識.md
+++ b/docs/01_基礎知識.md
@@ -347,26 +347,15 @@ Microsoftが定義した「企業向けAzure環境のベストプラクティス
 
 いきなりAzureでアプリを作り始めると、こんな問題が起きます：
 
-```
-❌ よくある失敗例
+### ❌ よくある失敗例
 
-1. リソースがバラバラ
-   → 「あのVMどのRGに入れたっけ？」
+1. **リソースがバラバラ** → 「あのVMどのRGに入れたっけ？」
+2. **セキュリティが甘い** → 「Public IP全開で本番デプロイしちゃった…」
+3. **コストが見えない** → 「今月の請求、なんで500万円！？」
+4. **権限がめちゃくちゃ** → 「開発者が本番環境を削除できちゃう」
+5. **監視してない** → 「障害に3日気づかなかった」
 
-2. セキュリティが甘い
-   → 「Public IP全開で本番デプロイしちゃった…」
-
-3. コストが見えない
-   → 「今月の請求、なんで500万円！？」
-
-4. 権限がめちゃくちゃ
-   → 「開発者が本番環境を削除できちゃう」
-
-5. 監視してない
-   → 「障害に3日気づかなかった」
-```
-
-Landing Zonesは、**こういう問題を最初から防ぐ仕組み**です。
+Landing Zonesは、こういう問題を最初から防ぐ仕組みです。
 
 #### 飛行機の例で理解しよう
 
